# proxima

./: .env  .gitignore  app.py  container.py  logger.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
src/: exceptions.py
src/apps/common/: models.py  repository.py  schemas.py  test.py
src/apps/common/routers/: __init__.py  auth.py  file.py
src/apps/common/services/: __init__.py  auth.py  file.py
src/apps/manage/: event.py  models.py  repository.py  schemas.py
src/apps/manage/routers/: __init__.py  authority.py  perm.py  role.py  user.py
src/apps/manage/services/: __init__.py  authority.py  perm.py  role.py  user.py
src/common/: constant.py  enums.py
src/core/: event.py  redis.py  repository.py  security.py  service.py
src/core/config/: serializer.py
src/core/db/: model.py  session.py
src/core/web/: request.py  response.py  schemas.py
src/utils/: __init__.py  date.py  request.py  security.py  strings.py  tree.py
test/api_test/: base.py  test_common.py
test/unit_test/: test_common.py  test_manage.py
tests/api_test/: base.py  test_common.py  test_manage.py
tests/unit_test/: base.py  test_common.py  test_manage.py
